force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/HealthCloudGA__EhrCarePlanActivity__c.object-meta.xml
<CustomObject>
    <label>EHR Care Plan Activity</label>
    <nameField>
        <displayFormat>Acti-{0}</displayFormat>
        <label>EHR Care Plan Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Care Plan Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>