force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__ActivityPeriod__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ActivityPeriod__c</fullName>
    <description>When activity is to occur</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>