force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__Details__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>