force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__IsProhibited__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IsProhibited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProhibited</label>
    <type>Checkbox</type>
</CustomField>