force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__LocationId__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Location Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>