force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__LocationLine1__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationLine1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>