force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__LocationType__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>