force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__LocationUse__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationUse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>