force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__ProductMedication__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ProductMedication__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Medication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>