force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__ProductSubstance255__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ProductSubstance255__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Substance 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>