force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__Quantity__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Quantity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>