force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__RelatedCarePlanGoal2__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RelatedCarePlanGoal2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Care Plan Goal2</label>
    <referenceTo>HealthCloudGA__EhrCarePlanGoal__c</referenceTo>
    <relationshipLabel>Care Plan Activities</relationshipLabel>
    <relationshipName>CarePlanActivities2</relationshipName>
    <type>Lookup</type>
</CustomField>