force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__RelatedEncounter__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RelatedEncounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Encounter</label>
    <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
    <relationshipLabel>Care Plan Activities</relationshipLabel>
    <relationshipName>CarePlanActivities</relationshipName>
    <type>Lookup</type>
</CustomField>