force-app/main/default/src/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__RelatedMedicationPrescription__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RelatedMedicationPrescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Medication Prescription</label>
    <referenceTo>HealthCloudGA__EhrMedicationPrescription__c</referenceTo>
    <relationshipLabel>Care Plan Activities</relationshipLabel>
    <relationshipName>CarePlanActivities</relationshipName>
    <type>Lookup</type>
</CustomField>